; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/utils/adt/extr_tsquery.c_get_modifiers.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/utils/adt/extr_tsquery.c_get_modifiers.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i8*, i32*, i32*)* @get_modifiers to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @get_modifiers(i8* %0, i32* %1, i32* %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  store i8* %0, i8** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32* %2, i32** %7, align 8
  %8 = load i32*, i32** %6, align 8
  store i32 0, i32* %8, align 4
  %9 = load i32*, i32** %7, align 8
  store i32 0, i32* %9, align 4
  %10 = load i8*, i8** %5, align 8
  %11 = call i32 @t_iseq(i8* %10, i8 signext 58)
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %15, label %13

13:                                               ; preds = %3
  %14 = load i8*, i8** %5, align 8
  store i8* %14, i8** %4, align 8
  br label %58

15:                                               ; preds = %3
  %16 = load i8*, i8** %5, align 8
  %17 = getelementptr inbounds i8, i8* %16, i32 1
  store i8* %17, i8** %5, align 8
  br label %18

18:                                               ; preds = %53, %15
  %19 = load i8*, i8** %5, align 8
  %20 = load i8, i8* %19, align 1
  %21 = sext i8 %20 to i32
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %23, label %27

23:                                               ; preds = %18
  %24 = load i8*, i8** %5, align 8
  %25 = call i32 @pg_mblen(i8* %24)
  %26 = icmp eq i32 %25, 1
  br label %27

27:                                               ; preds = %23, %18
  %28 = phi i1 [ false, %18 ], [ %26, %23 ]
  br i1 %28, label %29, label %56

29:                                               ; preds = %27
  %30 = load i8*, i8** %5, align 8
  %31 = load i8, i8* %30, align 1
  %32 = sext i8 %31 to i32
  switch i32 %32, label %51 [
    i32 97, label %33
    i32 65, label %33
    i32 98, label %37
    i32 66, label %37
    i32 99, label %41
    i32 67, label %41
    i32 100, label %45
    i32 68, label %45
    i32 42, label %49
  ]

33:                                               ; preds = %29, %29
  %34 = load i32*, i32** %6, align 8
  %35 = load i32, i32* %34, align 4
  %36 = or i32 %35, 8
  store i32 %36, i32* %34, align 4
  br label %53

37:                                               ; preds = %29, %29
  %38 = load i32*, i32** %6, align 8
  %39 = load i32, i32* %38, align 4
  %40 = or i32 %39, 4
  store i32 %40, i32* %38, align 4
  br label %53

41:                                               ; preds = %29, %29
  %42 = load i32*, i32** %6, align 8
  %43 = load i32, i32* %42, align 4
  %44 = or i32 %43, 2
  store i32 %44, i32* %42, align 4
  br label %53

45:                                               ; preds = %29, %29
  %46 = load i32*, i32** %6, align 8
  %47 = load i32, i32* %46, align 4
  %48 = or i32 %47, 1
  store i32 %48, i32* %46, align 4
  br label %53

49:                                               ; preds = %29
  %50 = load i32*, i32** %7, align 8
  store i32 1, i32* %50, align 4
  br label %53

51:                                               ; preds = %29
  %52 = load i8*, i8** %5, align 8
  store i8* %52, i8** %4, align 8
  br label %58

53:                                               ; preds = %49, %45, %41, %37, %33
  %54 = load i8*, i8** %5, align 8
  %55 = getelementptr inbounds i8, i8* %54, i32 1
  store i8* %55, i8** %5, align 8
  br label %18

56:                                               ; preds = %27
  %57 = load i8*, i8** %5, align 8
  store i8* %57, i8** %4, align 8
  br label %58

58:                                               ; preds = %56, %51, %13
  %59 = load i8*, i8** %4, align 8
  ret i8* %59
}

declare dso_local i32 @t_iseq(i8*, i8 signext) #1

declare dso_local i32 @pg_mblen(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
